--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -4,8 +4,12 @@
   align-items: center;
 }
 
-.container h1 {
+.container header {
+  width: 50%;
   margin: 84px 0 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .container input {
@@ -15,6 +19,18 @@
   border-radius: 5px;
   border: none;
   font-size: 16px;
+}
+
+.container header img {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  margin-left: 7px;
+}
+
+.container header div {
+  display: flex;
+  align-items: center;
 }
 
 .container button {
